creacion de enlaces entre las diferentes paginas del juego

--- a/views/game.html
+++ b/views/game.html
@@ -6,6 +6,15 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="colorSelection">
+        div con los diferentes colores
+    </div>
+    <div id="board">
+        div con el tablero
+
+    </div>
+    <div id="score">
+        div con la puntuación
+    </div>
 </body>
 </html>
