--- a/views/help.html
+++ b/views/help.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="help">
+        <h2>Help</h2>
+        <p>Click on the squares to change their color. The goal is to make all the squares the same color.</p>
+    </div>
 </body>
 </html>
