integracion de mecanica de intentos, pistas y aviso de victoria

--- a/views/selectcolours.html
+++ b/views/selectcolours.html
@@ -21,7 +21,8 @@
 
             <br>
             <button type="submit" value="Submit">Submit</button>
-        </form>    
+        </form> 
+        <a href="./game.html">Iniciar partida</a>   
     </div>
     <script src="../js/selectcolours.js"></script>
 </body>
