--- a/views/game.html
+++ b/views/game.html
@@ -4,17 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div id="colorSelection">
-        div con los diferentes colores
-    </div>
-    <div id="board">
-        div con el tablero
+<div class="container-fluid">
+    <div class="row">
+    <div class="col-lg-2 col-md-12" id="lateralMenu">
+        <h2>MasterMind</h2>
+        <div class="row">
+            <div class="col-sm">
+                <img src="../img/circulo.png" class="circle" alt="circulo vacio" id="circle0">
+            </div>
+            <div class="col-sm">
+                <img src="../img/circulo.png" class="circle" alt="circulo vacio" id="circle1">
+            </div>
+            <div class="col-sm">
+                <img src="../img/circulo.png" class="circle" alt="circulo vacio" id="circle2">
+            </div>
+            <div class="col-sm">
+                <img src="../img/circulo.png" class="circle" alt="circulo vacio" id="circle3">
+            </div>
+        </div>
+        <button id="try">try</button>
+        
+        
+        
 
     </div>
-    <div id="score">
-        div con la puntuación
+    <div class="col-lg-1 col-md-12">
+        <br>
     </div>
+    <div class="col-lg-3 col-md-12" id="board">
+
+    </div>
+    <div class="col-lg-1 col-md-12">
+        <br>
+    </div>
+
+    <div class="col-lg-3 col-md-12">
+        <h2>Clues</h2>
+        <div class="row" id="clues">
+
+        
+        </div>
+    </div>
+
+    </div>
+</div>
+    
+    <script src="../js/game.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
