--- a/views/game.html
+++ b/views/game.html
@@ -8,25 +8,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<div class="container-fluid">
+<div class="container">
     <div class="row">
-    <div class="col-lg-2 col-md-12" id="lateralMenu">
-        <h2>MasterMind</h2>
+    <div class="col-lg-3 col-md-12" id="lateralMenu">
+        
         <div class="row">
-            <div class="col-sm">
+            <h2>MasterMind</h2>
+            <div class="col">
                 <img src="../img/circulo.png" class="circle" alt="circulo vacio" id="circle0">
             </div>
-            <div class="col-sm">
+            <div class="col">
                 <img src="../img/circulo.png" class="circle" alt="circulo vacio" id="circle1">
             </div>
-            <div class="col-sm">
+            <div class="col">
                 <img src="../img/circulo.png" class="circle" alt="circulo vacio" id="circle2">
             </div>
-            <div class="col-sm">
+            <div class="col">
                 <img src="../img/circulo.png" class="circle" alt="circulo vacio" id="circle3">
             </div>
         </div>
-        <button id="try">try</button>
+        <button type="button" class="btn btn-primary" id="try">try</button>
         
         
         
@@ -35,7 +36,8 @@
     <div class="col-lg-1 col-md-12">
         <br>
     </div>
-    <div class="col-lg-3 col-md-12" id="board">
+    <div class="col-lg-5 col-md-12" id="board">
+        <h2>Board</h2>
 
     </div>
     <div class="col-lg-1 col-md-12">
