--- a/views/savename.html
+++ b/views/savename.html
@@ -4,27 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
-    <main>
-        <div>
+        <div class="container text-center mb-12">
             <h2>Enter your name:</h2>
             <form id="myForm">
-                <label for="fname">Nombre:</label><br>
-                <input type="text" id="fname" name="fname"><br>
-                <label for="difficulty">Difficulty:</label><br>
-                <select id="difficulty" name="difficulty">
-                    <option value="easy">Easy</option>
-                    <option value="medium">Medium</option>
-                    <option value="hard">Hard</option>
-                </select>
+                <div class="input-group-sm mb-3">
+                    <span class="input-group-text" for="fname">Name:</label><br>
+                    <input type="text" class="form-control" aria-label="Nickname" id="fname" name="fname"><br>
+                </div>
+                <div class="input-group-sm mb-3">
+                    <label class="input-group-text" for="difficulty">Difficulty:</label>
+                    <select class="form-select" id="difficulty" name="difficulty">
+                        <option selected value="easy">Easy</option>
+                        <option value="medium">Medium</option>
+                        <option value="hard">Hard</option>
+                    </select>
+                </div> 
+                <button type="submit" class="btn btn-primary btn-lg"> Save </button>                
+                </form>
                 
-                <input type="submit" value="Submit">
-              </form>
+                <a href="selectcolours.html"><button type="button" class="btn btn-secondary">select colors</button></a>
+                
         </div>
-
-        <a href="./selectcolours.html">Color Selection</a>
-    </main>
+                
+        </div>
     <script src="../js/savename.js"></script>
 </body>
 </html>
