--- a/views/selectcolours.html
+++ b/views/selectcolours.html
@@ -4,26 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-    <div id="selectColors">
+    <div class="container text-center" id="selectColors">
         <form id="fcolors">
             <h2>Select the colours:</h2>
-            
-                
-                    <input type="checkbox" name="option" value="red">Red</option>
-                    <input type="checkbox" name="option"value="blue">Blue</input>
-                    <input type="checkbox" name="option" value="green">Green</input>
-                    <input type="checkbox" name="option" value="yellow">Yellow</input>
-                    <input type="checkbox" name="option" value="purple">Purple</input>
-                    <input type="checkbox" name="option" value="orange">Orange</input>
-                
+                <div class="form-check-inline">
+                    <img src="../img/red.png" class="circle"> 
+                    <input class="form-check-input" type="checkbox" name="option" value="red">Red</option>
+                </div>
 
+                <div class="form-check-inline">
+                    <img src="../img/blue.png" class="circle"> 
+                    <input class="form-check-input" type="checkbox" name="option"value="blue">Blue</input>
+                </div>
+                
+                <div class="form-check-inline">
+                    <img src="../img/green.png" class="circle"> 
+                    <input class="form-check-input" type="checkbox" name="option" value="green">Green</input>
+                </div>
+
+                <div class="form-check-inline">
+                    <img src="../img/yellow.png" class="circle"> 
+                    <input class="form-check-input" type="checkbox" name="option" value="yellow">Yellow</input>
+                </div>
+                
+                <div class="form-check-inline">
+                    <img src="../img/purple.png" class="circle">
+                    <input class="form-check-input" type="checkbox" name="option" value="purple">Purple</input>
+                </div>
+
+                <div class="form-check-inline">
+                    <img src="../img/orange.png" class="circle"> 
+                    <input class="form-check-input" type="checkbox" name="option" value="orange">Orange</input>
+                </div>
+                
+            </div>
             <br>
-            <button type="submit" value="Submit">Submit</button>
-        </form> 
-        <a href="./game.html">Iniciar partida</a>   
+            <button type="submit" class="btn btn-primary btn-lg mb-3"> Save </button>
+        </form>
+        <a href="game.html"><button type="button" class="btn btn-secondary btn-lg mb-3">Start Game</button></a>  
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="../js/selectcolours.js"></script>
 </body>
 </html>
