--- a/views/selectcolours.html
+++ b/views/selectcolours.html
@@ -43,7 +43,7 @@
                 
             </div>
             <br>
-            <button type="submit" class="btn btn-primary btn-lg mb-3"> Save </button>
+            <button type="submit" class="btn btn-primary btn-lg mb-3" id="savecolors"> Save </button>
         </form>
         <a href="game.html"><button type="button" class="btn btn-secondary btn-lg mb-3">Start Game</button></a>  
     </div>
