--- a/views/game.html
+++ b/views/game.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container-fluid text-center">
     <div class="row">
-    <div class="col-lg-3 col-md-12" id="lateralMenu">
+    <div class="col-10 text-center" id="lateralMenu">
         
         <div class="row">
             <h2>MasterMind</h2>
@@ -33,20 +33,18 @@
         
 
     </div>
-    <div class="col-lg-1 col-md-12">
-        <br>
-    </div>
-    <div class="col-lg-5 col-md-12" id="board">
+    
+    <div class="col-10 text-center" id="board">
         <h2>Board</h2>
 
     </div>
-    <div class="col-lg-1 col-md-12">
+    <div class="col-12">
         <br>
     </div>
 
-    <div class="col-lg-3 col-md-12">
+    <div class="col-10" id="clues">
         <h2>Clues</h2>
-        <div class="row" id="clues">
+        
 
         
         </div>
