--- a/views/game.html
+++ b/views/game.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 <body>
-<div class="container-fluid text-center">
+<div class="container text-center">
     <div class="row">
-    <div class="col-10 text-center" id="lateralMenu">
+    <div class="col-10 text-center my-5 mx-auto" id="lateralMenu">
         
         <div class="row">
             <h2>MasterMind</h2>
@@ -34,15 +34,13 @@
 
     </div>
     
-    <div class="col-10 text-center" id="board">
+    <div class="col-10 my-5 mx-auto" id="board">
         <h2>Board</h2>
 
     </div>
-    <div class="col-12">
-        <br>
-    </div>
+    
 
-    <div class="col-10" id="clues">
+    <div class="col-10 my-5 mx-auto" id="clues">
         <h2>Clues</h2>
         
 
