--- a/views/selectcolours.html
+++ b/views/selectcolours.html
@@ -43,9 +43,9 @@
                 
             </div>
             <br>
-            <button type="submit" class="btn btn-primary btn-lg mb-3" id="savecolors"> Save </button>
+            <button type="submit" class="btn btn-primary btn-lg mb-3" id="savecolors"> Start Game </button>
         </form>
-        <a href="game.html"><button type="button" class="btn btn-secondary btn-lg mb-3">Start Game</button></a>  
+          
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="../js/selectcolours.js"></script>
