--- a/views/savename.html
+++ b/views/savename.html
@@ -23,10 +23,10 @@
                         <option value="hard">Hard</option>
                     </select>
                 </div> 
-                <button type="submit" class="btn btn-primary btn-lg"> Save </button>                
+                <button type="submit" class="btn btn-primary btn-lg my-5" > Save </button>                
                 </form>
                 
-                <a href="selectcolours.html"><button type="button" class="btn btn-secondary">select colors</button></a>
+              
                 
         </div>
                 
