--- a/css/main.css
+++ b/css/main.css
@@ -5,12 +5,12 @@
 }
 
 body{
+    font-family: 'Retro';
     background-image: url('../img/fondo.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-repeat: repeat;
     background-position: center;
-    font-family: 'Retro';
     color: #000;
     
 
@@ -25,8 +25,43 @@ h2{
 .container{
     margin-top: 2em;
     margin-bottom: 2em;
+    background-color: grey;
+    border-radius: 1em;
+    box-shadow: 5px 5px 10px #323232 ;
     
     
+    
+}
+
+input{
+    font-family: Retro;
+    font-size: 1.5em;
+    border-radius: 1em;
+    background-color: #000;
+    color: #fff;
+    border: 0.1em solid #000;
+    box-shadow: 5px 5px 10px #323232 ;
+}
+
+
+button{
+    font-family: Retro;
+    font-size: 1.5em;
+    border-radius: 1em;
+    background-color: #000;
+    color: #fff;
+    border: 0.1em solid #000;
+    box-shadow: 5px 5px 10px #323232 ;
+}
+
+.option{
+    font-family: Retro;
+    font-size: 1.5em;
+    border-radius: 1em;
+    background-color: #000;
+    color: #fff;
+    border: 0.1em solid #000;
+    box-shadow: 5px 5px 10px #323232 ;
 }
 
 .circle{
