--- a/views/selectcolours.html
+++ b/views/selectcolours.html
@@ -13,7 +13,7 @@
             <h2>Select the colours:</h2>
                 <div class="form-check-inline">
                     <img src="../img/red.png" class="circle"> 
-                    <input class="form-check-input" type="checkbox" name="option" value="red">Red</option>
+                    <input class="form-check-input" type="checkbox" name="option" value="red">Red</input>
                 </div>
 
                 <div class="form-check-inline">
@@ -41,8 +41,10 @@
                     <input class="form-check-input" type="checkbox" name="option" value="orange">Orange</input>
                 </div>
                 
+                
+
             </div>
-            <br>
+           
             <button type="submit" class="btn btn-primary btn-lg mb-3" id="savecolors"> Start Game </button>
         </form>
           
