--- a/views/savename.html
+++ b/views/savename.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MasterMind</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -13,14 +13,14 @@
             <form id="myForm">
                 <div class="input-group-sm mb-3">
                     <span class="input-group-text" for="fname">Name:</label><br>
-                    <input type="text" class="form-control" aria-label="Nickname" id="fname" name="fname"><br>
+                    <input type="text" class="form-control" placeholder="Enter Your Name"aria-label="Nickname" id="fname" name="fname"><br>
                 </div>
                 <div class="input-group-sm mb-3">
                     <label class="input-group-text" for="difficulty">Difficulty:</label>
                     <select class="form-select" id="difficulty" name="difficulty">
-                        <option selected value="easy">Easy</option>
-                        <option value="medium">Medium</option>
-                        <option value="hard">Hard</option>
+                        <option selected value="easy">Easy: 4 Colors 10 tries</option>
+                        <option value="medium">Medium: 5 color 6 tries</option>
+                        <option value="hard">Hard: 6 colors 4 tries</option>
                     </select>
                 </div> 
                 <button type="submit" class="btn btn-primary btn-lg my-5" > Save </button>                
