adaptacion de imagenes de lose, index y winner a formato responsive

--- a/views/lose.html
+++ b/views/lose.html
@@ -12,7 +12,7 @@
         <main>
             <div class="container text-center">
                 <div> 
-                    <img src="../img/sad-cat-60.gif" alt="">
+                    <img class="img-fluid" src="../img/sad-cat-60.gif" alt="">
                     <h2>Has Perdido</h2>
                     <a href="../index.html"> Volver a Jugar</a>
                 </div>
