--- a/views/winner.html
+++ b/views/winner.html
@@ -13,7 +13,7 @@
         <div class="container text-center">
             <div class='row'>
                 <div class="col">
-                    <img src="../img/victory.gif" alt="">
+                    <img class="img-fluid" src="../img/victory.gif" alt="">
                     <h2>You win!!</h2>
                     <a href="../index.html"> Volver a Jugar</a>
                 </div>                 
